--- a/GASearchCV.ipynb
+++ b/GASearchCV.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5481f841",
+   "execution_count": 3,
+   "id": "08b6c526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,14 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.datasets import load_iris"
+    "from sklearn.datasets import load_iris\n",
+    "import cProfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "2f3af8b0",
+   "execution_count": 4,
+   "id": "210f2c07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "500fbda2",
+   "execution_count": 5,
+   "id": "1c03e6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "85ef4b80",
+   "execution_count": 6,
+   "id": "922da4c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "b2288568",
+   "execution_count": 7,
+   "id": "ac3f656d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "dbca11f4",
+   "execution_count": 8,
+   "id": "45f8007d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,29 +161,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "16c1628d",
+   "execution_count": 9,
+   "id": "6814e159",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "ga.fit(X,y)"
+    "ga.fit(X,y)\n",
+    "#cProfile.run(\"ga.fit(X, y)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "d177e5c3",
+   "execution_count": 10,
+   "id": "bfc94971",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 6, 'criterion': 'gini'}"
+       "{'max_depth': 4, 'criterion': 'gini'}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,8 +195,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "73220569",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9600000000000002"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ga.best_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "251c6595",
+   "id": "8820b716",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2d996d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e8015fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6124aa74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905d9c6b",
    "metadata": {},
    "outputs": [],
    "source": []
