Presentation added and paper updated

--- a/SimulatedAnnealingCV.ipynb
+++ b/SimulatedAnnealingCV.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "f2da2e7a",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "2d4ed2e6",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "56ed6ffc",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "dd2bc745",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "4           3   25      2  2022             6724        9532              2  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "2906a371",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "e020d25f",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "id": "f42e9c9e",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Izvršavanje koda trajalo je 1.139803171157837 sekundi. Best score: 0.45\n"
+      "Izvršavanje koda trajalo je 0.8009028434753418 sekundi. Best score: 0.41\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "9e8b0ad8",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "cb59581f",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "f6798827",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "id": "28b3701f",
    "metadata": {},
    "outputs": [
@@ -1082,10 +1082,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Izvršavanje koda za param_grid_1 trajalo je 2.5925278663635254 sekundi. Best score: 0.362\n",
-      "Izvršavanje koda za param_grid_2 trajalo je 5.652605056762695 sekundi. Best score: 0.36300000000000004\n",
-      "Izvršavanje koda za param_grid_3 trajalo je 10.247890949249268 sekundi. Best score: 0.364\n",
-      "Izvršavanje koda za param_grid_4 trajalo je 22.98284125328064 sekundi. Best score: 0.364\n"
+      "Izvršavanje koda za param_grid_1 trajalo je 14.773550748825073 sekundi. Best score: 0.33880000000000005\n",
+      "Izvršavanje koda za param_grid_2 trajalo je 32.85912036895752 sekundi. Best score: 0.3392\n",
+      "Izvršavanje koda za param_grid_3 trajalo je 62.73736882209778 sekundi. Best score: 0.3418\n",
+      "Izvršavanje koda za param_grid_4 trajalo je 166.14768362045288 sekundi. Best score: 0.3427\n"
      ]
     }
    ],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "id": "c574c0d6",
    "metadata": {},
    "outputs": [
@@ -1112,10 +1112,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Izvršavanje koda za param_grid_1 trajalo je 6.306918144226074 sekundi. Best score: 0.3387\n",
-      "Izvršavanje koda za param_grid_2 trajalo je 16.376015186309814 sekundi. Best score: 0.3392\n",
-      "Izvršavanje koda za param_grid_3 trajalo je 38.28407096862793 sekundi. Best score: 0.34199999999999997\n",
-      "Izvršavanje koda za param_grid_4 trajalo je 70.9538106918335 sekundi. Best score: 0.3427\n"
+      "Izvršavanje koda za param_grid_1 trajalo je 9.620265483856201 sekundi. Best score: 0.3387\n",
+      "Izvršavanje koda za param_grid_2 trajalo je 17.07034683227539 sekundi. Best score: 0.3392\n",
+      "Izvršavanje koda za param_grid_3 trajalo je 29.397377014160156 sekundi. Best score: 0.34190000000000004\n",
+      "Izvršavanje koda za param_grid_4 trajalo je 74.41358613967896 sekundi. Best score: 0.3427\n"
      ]
     }
    ],
@@ -1134,8 +1134,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d5a3c8aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvršavanje koda za param_grid_1 trajalo je 101.8258125782013 sekundi. Best score: 0.33550335552389443\n",
+      "Izvršavanje koda za param_grid_2 trajalo je 221.7616903781891 sekundi. Best score: 0.33551349596905994\n",
+      "Izvršavanje koda za param_grid_3 trajalo je 505.57762384414673 sekundi. Best score: 0.3357365374356969\n",
+      "Izvršavanje koda za param_grid_4 trajalo je 1099.5495190620422 sekundi. Best score: 0.3370040709743556\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid=[param_grid_1,param_grid_2,param_grid_3,param_grid_4]\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "for i,params in enumerate(param_grid):\n",
+    "    grid=GridSearchCV(model,param_grid=params,n_jobs=-1,scoring='accuracy')\n",
+    "    start_time = time.time()\n",
+    "    grid.fit(X_100000,y_100000)\n",
+    "    end_time = time.time() \n",
+    "    execution_time = end_time - start_time\n",
+    "    print(f\"Izvršavanje koda za param_grid_{i+1} trajalo je {execution_time} sekundi. Best score: {grid.best_score_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6544a4ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvršavanje koda za param_grid_1 trajalo je 372.60884284973145 sekundi. Best score: 0.33550335552389443\n",
+      "Izvršavanje koda za param_grid_2 trajalo je 773.6979596614838 sekundi. Best score: 0.33551349596905994\n",
+      "Izvršavanje koda za param_grid_3 trajalo je 9406.722153663635 sekundi. Best score: 0.3357263980187655\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid=[param_grid_1,param_grid_2,param_grid_3,param_grid_4]\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "for i,params in enumerate(param_grid):\n",
+    "    grid=GridSearchCV(model,param_grid=params,n_jobs=1,scoring='accuracy')\n",
+    "    start_time = time.time()\n",
+    "    grid.fit(X_100000,y_100000)\n",
+    "    end_time = time.time() \n",
+    "    execution_time = end_time - start_time\n",
+    "    print(f\"Izvršavanje koda za param_grid_{i+1} trajalo je {execution_time} sekundi. Best score: {grid.best_score_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52c87aef",
    "metadata": {},
    "outputs": [],
    "source": []
